--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "repository": {},
   "license": "UNLICENSED",
   "dependencies": {
-    "@remotion/cli": "4.0.46",
+    "@remotion/cli": "4.0.67",
+    "fs": "^0.0.1-security",
+    "google-tts-api": "^2.0.2",
+    "lorem-ipsum": "^2.0.8",
+    "path": "^0.12.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "remotion": "4.0.46"
+    "remotion": "4.0.67",
+    "say": "^0.16.0",
+    "say.js": "^1.4.0"
   },
   "devDependencies": {
-    "@remotion/eslint-config": "4.0.46",
+    "@remotion/eslint-config": "4.0.67",
     "@types/react": "^18.0.26",
     "@types/web": "^0.0.86",
     "eslint": "^8.43.0",
